fixed header projects-container overlapping content

--- a/app/assets/styles/components/_headline.css
+++ b/app/assets/styles/components/_headline.css
@@ -25,4 +25,8 @@
   &--rotated {
     transform: translateX(39%) rotate(-90deg);
   }
+
+  &--no-pointer-events {
+    pointer-events: none;
+  }
 }
