--- a/app/assets/styles/components/_page-section.css
+++ b/app/assets/styles/components/_page-section.css
@@ -16,8 +16,17 @@
       padding-bottom: 3em;
     }
   }
+
   &--no-top-padding {
     padding-top: 0;
+  }
+
+  &--z-index-1 {
+    z-index: 1;
+  }
+
+  &--no-pointer-events {
+    pointer-events: none;
   }
 
   &--huge-bottom-space-on-large {
