--- a/app/assets/styles/layout/_header.css
+++ b/app/assets/styles/layout/_header.css
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   font-weight: 300;
-  z-index: 2;
+  z-index: 1;
 
   * {
     transform: translateZ(0);
